force-app/main/default/objects/KanbanColumn__c/KanbanColumn__c.object-meta.xml
<CustomObject>
    <description>A new kanban column</description>
    <label>KanbanColumn</label>
    <nameField>
        <label>KanbanColumn Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KanbanColumns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>