force-app/main/default/objects/KanbanColumn__c/fields/autoId__c.field-meta.xml
<CustomField>
    <fullName>autoId__c</fullName>
    <description>index for kanbancolumn to order by in query</description>
    <displayFormat>autoId-{0000}</displayFormat>
    <label>autoId</label>
    <type>AutoNumber</type>
</CustomField>