force-app/main/default/objects/KanbanColumn__c/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <label>Backlog</label>
    <referenceTo>Backlog__c</referenceTo>
    <relationshipLabel>KanbanColumns</relationshipLabel>
    <relationshipName>KanbanColumns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>