force-app/main/default/objects/KanbanColumn__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>relate to project</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>KanbanColumns</relationshipLabel>
    <relationshipName>KanbanColumns</relationshipName>
    <type>Lookup</type>
</CustomField>